add doc for instance setup